	3.2.6.2	3/30/2016
				Updated Bukkit API to 1.9.2-R0.1-SNAPSHOT.
				Updated metrics to R8-SNAPSHOT.
	3.2.7	5/6/2017
				Fixed checking for remote locale files causing an error since Dropbox changed their public folder system.
				New Configuration Options:
					general.messaging.alerts.reportedPlayerLogin.enabled - Enable messaging when a reported player logs in.
                    general.messaging.alerts.reportedPlayerLogin.toPlayer - Enable sending messages to player that a reported player logged in.
                    general.messaging.alerts.reportedPlayerLogin.toConsole - Enable sending messages to the console that a reported player logged in.
    3.3.0   11/16/2018
                Updated Bukkit API to 1.13.2-R0.1-SNAPSHOT.
                Features:
                    Use Vault instead of PermissionsEx for player permissions.
                    Use bStats instead of MCStats for plugin statistic collection.
                Fixes:
                    Fixed the build being broken from a few dependencies that dead and no longer available (PermissionsEx and MCStats).
    3.3.1   11/16/2018
                Fixed error when loading permissions when Vault is not provided.
    3.3.2   7/16/2019
                Updated Bukkit API to 1.14.3-R0.1-SNAPSHOT
                Fixed issue with initializing metrics on a separate thread.
    3.3.3   2/10/2020
                Updated Bukkit API to 1.15.2-R0.1-SNAPSHOT.
                Updated supported Java version to 1.7.
                Set Spigot api-version to stop getting flagged as a legacy plugin.
                Fixed no message being sent to the command sender if the report index is out of range.
                Fixed sending an error instead of a usage hint if the report index is not parsable into an integer.
    3.3.4
                Added a permission node for allowing players to view the help dialog.
                Fixed issue with some UTF-8 languages not being stored in the database correctly.